--- a/Programowanie/strona.html
+++ b/Programowanie/strona.html
@@ -59,5 +59,13 @@
 	</ul>
 	</li>
 	</ul>
+	<dl>
+<dt>kontynent</dt>
+<dd>olbrzymi obszar lądu otoczony ze wszystkich stron morzami i oceanami, a z innymi kontynentami połączony
+<dt>państwo</dt>
+<dd>forma organizacji społeczeństwa mająca monopol na stanowienie i wykonywanie prawa na określonym terytorium
+<dt>miasto</dt>
+<dd>historycznie ukształtowana jednostka osadnicza charakteryzująca się dużą intensywnością zabudowy</dd>
+</dl>
 	</body>
 </html>
